# model-converter

./: .clangd  .gitignore  CMakeLists.txt  bvh.hpp  debug_build  helper.hpp  includes.h  kdtree.hpp  main.cpp  main.odin  model-converter  structs.h
.zed/: debug.json  keymap.json  settings.json  settings.json.local  tasks.json
Input/: Dymondy.fbx  Dymondy2.fbx  Dymonled.fbx  Untitled.fbx
Output/: Dymondy.pm  Dymondy2.pm  Dymonled.pm  Dymonled_t.pm  Untitled.pm  Untitled_t.pm
debug_build.dSYM/Contents/: Info.plist
debug_build.dSYM/Contents/Resources/DWARF/: debug_build
debug_build.dSYM/Contents/Resources/Relocations/aarch64/: debug_build.yml
extensions/filepath2/: filepath2.odin
extensions/queue2/: queue2.odin
extensions/tests/: queue2_tests.odin
extensions/xml2/: xml.odin
extensions/xxhash2/: xxhash2.odin
model-converter.dSYM/Contents/: Info.plist
model-converter.dSYM/Contents/Resources/DWARF/: model-converter
model-converter.dSYM/Contents/Resources/Relocations/aarch64/: model-converter.yml
resource/: resource.odin
resource/scene/: scene.odin
scripts/: setup-zed-local.sh
